--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Page Title</title>
+        <title>CAMPAIGN</title>
     </head>
     <body>
       <p class="Stok">Stokeley Goulboure</p>
-<p> Make</p>
+<p> </p>
      <div class="Top">
      </div>
      <div class="button-parent">
