--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html> <html><head>
-        <title>Page Title</title>
+        <title>CAMPAIGN</title>
     <style>.Top{
     background: url("https://ssl.ulximg.com/image/750x750/cover/1543559464_1adb30161471c8c01850a8074dd1e4c3.jpg/7f21efeba154b0ad14fb20e2ca1a3ab7/1543559464_92cce3487cf64f3d3c1fe244096f00f1.jpg");
     height: 450px;
@@ -26,7 +26,7 @@
 </style></head>
     <body>
       <p class="Stok">Stokeley Goulboure</p>
-<p> Make</p>
+<p> </p>
      <div class="Top">
      </div>
      <div class="button-parent">
